--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -19,7 +19,7 @@ spec:
             - name: REACT_APP_API_URL
               valueFrom:
                 secretKeyRef:
-                  name: api-secret
+                  name: secret
                   key: react-api-url
 ---
 apiVersion: v1
