--- a/k8s/config/default.conf
+++ b/k8s/config/default.conf
@@ -1,11 +1,17 @@
 server {
-	listen 80;
+    listen 80;
 
-        location / {
-            proxy_pass http://frontend.default.svc.cluster.local:3000;
-        }
+    location / {
+        proxy_pass http://frontend.default.svc.cluster.local:3000;
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 300s;
+    }
 
-        location /api/ {
-            proxy_pass http://backend.default.svc.cluster.local:8080;
-	}
+    location /api/ {
+        proxy_pass http://backend.default.svc.cluster.local:8080;
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 300s;
+    }
 }
