--- a/k8s/config/default.conf
+++ b/k8s/config/default.conf
@@ -8,6 +8,13 @@ server {
         proxy_read_timeout 300s;
     }
 
+    location /ws/ {
+        proxy_pass http://backend.default.svc.cluster.local:8080;
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 300s;
+    }
+
     location /api/ {
         proxy_pass http://backend.default.svc.cluster.local:8080;
         proxy_connect_timeout 300s;
