--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -20,12 +20,12 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: secret
-                  key: react-api-url
+                  key: react-url-api
             - name: REACT_APP_KAKAO_MAPS_API_KEY
               valueFrom:
                 secretKeyRef:
                   name: secret
-                  key: react-api-kakaomap
+                  key: react-kakaomap-api
 ---
 apiVersion: v1
 kind: Service
