--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -16,12 +16,12 @@ spec:
         - name: frontend
           image: krmp-d2hub-idock.9rum.cc/dev-test/repo_ab467fbbabbb
           env:
-            - name: REACT_APP_API_URL
+            - name: REACT_APP_URL
               valueFrom:
                 secretKeyRef:
                   name: secret
                   key: react-url-api
-            - name: KAKAO_MAPS_API_KEY
+            - name: REACT_APP_KAKAO_MAPS_API_KEY
               valueFrom:
                 secretKeyRef:
                   name: secret
